--- a/app/views/performances.html
+++ b/app/views/performances.html
@@ -5,8 +5,9 @@
 			<span class='st_twitter_custom'><img src="http://repertorio.nyc/images/social-tw.png" onmouseover="this.src='http://repertorio.nyc/images/social-tw-ro.png'" onmouseout="this.src='http://repertorio.nyc/images/social-tw.png'" /></span>
 		</div>
 	<div class="announce vert-mid">
-      <h1>PERFORMANCES</h1>
-      <h2>AND TICKETS</h2>
+      <!-- <h1>PERFORMANCES</h1>
+      <h2>AND TICKETS</h2> -->
+      {{pageData.custom_fields.page_title[0]}}
     </div>
   </div>
 
