--- a/app/views/event.html
+++ b/app/views/event.html
@@ -46,10 +46,10 @@
     <div class="col-sm-12 col-md-5 calendar">
       <h2>PERFORMANCES THIS MONTH</h2>
 
-      <div ng-controller="calendarController">
+      <!-- <div ng-controller="calendarController">
         <jqx-calendar ng-model="date" jqx-settings="calendarSettings" id="eventWidget"></jqx-calendar>
-      </div>
-
+      </div> -->
+      <div full-calendar id='calendar'></div>
       <!-- <p>Selected Date: {{ data.date | date:'yyyy-MM-dd HH:mm' }}</p> -->
     </div>
     <div class="col-md-12 gallery">
@@ -95,5 +95,5 @@
   </div>
 
 </div>
-<stay-intouch></stay-Intouch>
+<stay-intouch></stay-intouch>
 <footer-block></footer-block>
