--- a/app/views/performances.html
+++ b/app/views/performances.html
@@ -48,9 +48,10 @@
       </div>
     </div>
     <div class="col-md-4">
-      <div ng-controller="calendarController">
+      <div full-calendar id='calendar'></div>
+      <!-- <div ng-controller="calendarController">
         <jqx-calendar ng-model="date" jqx-settings="calendarSettings" id="jqxWidget" style="margin-top: 50px;"></jqx-calendar>
-      </div>
+      </div> -->
 
       <div class="upcoming-shows">
         <h3>UPCOMING PERFORMANCES</h3>
